# dfinity-study-fetch-governance

./: Cargo.toml  README.md  canister_ids.json  dfx.json
canisters/fetcher/: Cargo.toml  fetcher.did
canisters/fetcher/src/: constants.rs  fetcher.did  lib.rs  main.rs  types.rs
